--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,6 +2,11 @@ spring:
   profiles:
     active: test
 
+
 notification:
   email-subject: Auto notification
   sender-email: robot@somecompany.com
+
+features:
+  active:
+    persistence: off
