branch by abstraction, almost done.

--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   profiles:
     active: test
+  jpa:
+    show-sql: true
+
 
 
 notification:
@@ -9,4 +12,4 @@ notification:
 
 features:
   active:
-    persistence: off
+    persistence: on
